@@ -1,3 +1,7 @@
+2010-02-11  Sanel <karijes@users.sourceforge.net>
+
+	* src/Theme.cpp: some cleanup
+
 2010-02-04  Sanel <karijes@users.sourceforge.net>
 
 	* configure.in:
